--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: "3"
 services:
   app:
     container_name: app
-    image: registry.gitlab.com/xsectorz/jenkins-test
+    image: registry.gitlab.com/ajdvdsf.aj/jenkins-assignment
     ports:
       - "4000:5000"
